Closed Bug 909832 Opened 12 years ago Closed 12 years ago

nsClipboard.cpp:960:38: error: use of undeclared identifier 'errno' and 'EINTR'

Categories

(Core :: Widget: Gtk, defect)

All
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

widget/gtk2/nsClipboard.cpp:960:38: error: use of undeclared identifier 'errno' (select_result == -1 && errno == EINTR)); ^ widget/gtk2/nsClipboard.cpp:960:47: error: use of undeclared identifier 'EINTR' (select_result == -1 && errno == EINTR)); ^ 2 errors generated.
Attached patch pull errno.hSplinter Review
Attachment #796138 - Flags: review?(roc)
Piling on, since i've also experienced that build failure...
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: