Bug 909832 - Make sure errno is declared. r=roc